# An2DO_4A

./: .gitignore  README.md  brouillon.ipynb  pyproject.toml
R/: shared_data.R
Rendu/: Fichier_Oral.ipynb  Slides_oral.ipynb  rendu_final.ipynb
Rendu/Fichier_Rendu/: Améliorations_Notes
Rendu/Fichier_Rendu/Python/: Analyse_bidimensionnelle.ipynb  CA_MCA_Parcoursup_python.ipynb  GMM_python.ipynb  MFA.ipynb
Rendu/Fichier_Rendu/R/: Analyse_Uni.ipynb
analyses/: 2_ACM.ipynb  3_clustering.ipynb  ACP.ipynb  AD_MFA_python.ipynb  Analyse_Uni.ipynb  CA_MCA_Parcoursup_python.ipynb  GMM.ipynb  GMM_python.ipynb  LDA.ipynb  SBM.ipynb  acp.rds  analyse_bidimensionnelle.ipynb  clustering_acm.ipynb  visu_carte.ipynb
data/: brouillon.ipynb
data/processed/: data_features_core.rds
data/raw/: data.ipynb  data_GPS.ipynb
