[project]
name = "Projet-AD"
version = "0.1.0"
description = "Projet d'analyse de données"
requires-python = ">=3.10"

dependencies = [
    "jupyter",
    "ipykernel",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "prince>=0.13",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "plotly>=5.15",
    "tqdm",
    "yellowbrick>=1.5",
    "pyreadr>=0.5.6",
    "graspologic>=3.4.4",
]
